--- a/main.html
+++ b/main.html
@@ -8,10 +8,9 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<h1>Time And Space Complexity</h1>
-	<p>Time complexity is a critical concept in computer science and plays a vital role in the design and analysis of efficient algorithms and data structures. It allows us to measure the amount of time an algorithm or data structure takes to execute, which is crucial for understanding its efficiency and scalability.
-	<br>
-	The ability to calculate <b>Space Complexity</b> is essential in considering an algorithm’s efficiency. In this section, we’ll analyze the <b>Space Complexity</b> of a few programs of differing difficulty. We’ll measure it using big-O notation.O(n)</p>
+	 <h1>Time,Space,Complexity</h1>
+	<p>Time complexity,efficient<br>
+		<b>Space Complexity</b>,O(n)</p>
     <script type="text/javascript" src="./script.js">
 </script>
 
